# cargo-checkmate

./: Cargo.toml  Dockerfile  README.md  crates.nix  flake.nix
.cargo/: audit.toml
.github/actions/: Dockerfile  cargo-checkmate.yaml  entrypoint.sh
.github/workflows/: callee-phase.yaml  callee.yaml  cargo-build-and-test.yaml  cargo-checkmate-image.yaml  cargo-checkmate.yaml  job-per-phase.yaml  no-action-docker.yaml  publish-docker.yaml  self-test.yaml  selftest.yaml
src/: cdcrate.rs  check.rs  cli.rs  duration.rs  executable.rs  gh.rs  git.rs  githook-pre-commit.sh  githook.rs  github-ci.yaml  githubci.rs  hook.rs  indenter.rs  iohelpers.rs  lib.rs  main.rs  options.rs  phase.rs  phases.rs  readme.rs  resultsdir.rs  run.rs  runner.rs  srcbundle.rs  subcommands.rs  tfi.rs
src/gh/: cargo-checkmate.yaml
src/githook/: pre-commit.sh  tests.rs
src/hook/: git.rs  githubci.rs  tests.rs
src/hook/bundles/git-hook.pre-commit/: v0
src/options/: tests.rs
src/phase/: indenter.rs
src/phase/indenter/: tests.rs  writecounter.rs
src/run/: tests.rs
src/runner/: indenter.rs  phaseresult.rs
src/runner/phaseresult/: indenter.rs
util/: make-release.sh
