[package]
name = "cargo-checkmate"
version = "0.1.11"
authors = ["nathan <nathan+dev@electriccoin.co>"]
edition = "2018"
description = "checkmate checks all the things - comprehensive out-of-the-box safety & hygiene checks."
license = "MIT"
homepage = "https://github.com/nathan-at-least/cargo-checkmate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abscissa_core = "0.6.0"
cargo-audit = "0.17.4"
include_dir = "0.7.3"
colored = "2.0.0"
clap = { version = "3.2.23", features = ["derive"] }

[dev-dependencies]
test-case = "2.2.2"
