[package]
name = "cargo-checkmate"
version = "0.1.14"
authors = ["nathan <nathan+dev@electriccoin.co>"]
edition = "2021"
description = "checkmate checks all the things - comprehensive out-of-the-box safety & hygiene checks."
license = "MIT"
homepage = "https://github.com/cargo-checkmate/cargo-checkmate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abscissa_core = "0.6.0"
anyhow = "1.0.70"
anyhow-std = "0.1.4"
cargo-audit = "0.17.4"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
include_dir = "0.7.3"

[dev-dependencies]
indoc = "2.0.1"
test-case = "2.2.2"
